cluster-sharding/kubernetes/akka-cluster.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: akka-kubernetes
  name: akka-kubernetes
  namespace: akka-kubernetes-tests
spec:
  replicas: 3
  selector:
    matchLabels:
     app: akka-kubernetes
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: akka-kubernetes
    spec:
      containers:
      - name: akka-kubernetes
        image: docker-registry-default.centralpark.lightbend.com/akka-kubernetes-tests/akka-kubernetes
        ports:
        - name: remoting
          containerPort: 2552
          protocol: TCP
        - name: management
          containerPort: 8558
          protocol: TCP
        - name: http
          containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ready
            port: management
        livenessProbe:
          httpGet:
            path: /alive
            port: management


---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: akka-kubernetes
  name: akka-kubernetes
  namespace: akka-kubernetes-tests
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: akka-kubernetes
  type: ClusterIP
---
# Can likely be changed to an Ingress
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: akka-kubernetes
  name: akka-kubernetes
  namespace: akka-kubernetes-tests
spec:
  host: akka-kubernetes-tests.centralpark.lightbend.com
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: akka-kubernetes
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    host: akka-kubernetes-tests.centralpark.lightbend.com
    routerName: router
    wildcardPolicy: None
